added location and opacity example to column 2

--- a/resume.html
+++ b/resume.html
@@ -150,9 +150,9 @@
 
                     <p>
 
-                        <i class="bi bi-calendar3"></i>
+                        <i class="bi bi-calendar3" style="opacity: 0.5"></i></i>
 
-                        November 2015 - current
+                        November 2015 - current&nbsp;&nbsp;<i class="bi bi-geo-alt-fill" style="opacity: 0.5"></i> Suitland, MD
 
                     </p>
 
