integrate bootstrap padding

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<div class="container-fluid d-flex p-0">
+<body class="container-fluid d-flex p-0">
     <div class="row" style="font-size: 20px;">
         <div class="col-xs-12 col-sm-7 col-md-6 col-xxl-4">
             <div class="fw-bold ps-2 pt-4 pb-4 pe-2"
@@ -108,9 +108,9 @@
                         U.S. Census
                         Bureau</h4>
                     <p>
-                        <i class="bi bi-calendar3" style="opacity: 0.4"></i>
-                        November 2015 - current&nbsp;&nbsp;&nbsp;&nbsp;
-                        <i class="bi bi-geo-alt-fill" style="opacity: 0.3"></i>
+                        <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                        <span class="pe-4">November 2015 - current</span>
+                        <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
                         Suitland, MD
                     </p>
                     <ul>
@@ -151,9 +151,9 @@
                     <h4 class="fw-bold" style="color: rgb(255, 60, 0)">Geography Division,
                         U.S. Census Bureau</h4>
                     <p>
-                        <i class="bi bi-calendar3" style="opacity: 0.4"></i>
-                        May 2009 - November 2015&nbsp;&nbsp;&nbsp;&nbsp;
-                        <i class="bi bi-geo-alt-fill" style="opacity: 0.3"></i>
+                        <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                        <span class="pe-4">November 2015 - current</span>
+                        <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
                         Suitland, MD
                     </p>
                     <ul>
@@ -176,9 +176,9 @@
                     <h4 class="fw-bold" style="color: rgb(255, 60, 0)">Geography Division,
                         U.S. Census Bureau</h4>
                     <p>
-                        <i class="bi bi-calendar3" style="opacity: 0.4"></i>
-                        June 2004 - May 2009&nbsp;&nbsp;&nbsp;&nbsp;
-                        <i class="bi bi-geo-alt-fill" style="opacity: 0.3"></i>
+                        <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                        <span class="pe-4">June 2004 - May 2009</span>
+                        <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
                         Suitland, MD
                     </p>
                     <ul>
@@ -197,6 +197,6 @@
             </div>
         </div>
     </div>
-</div>
+</body>
 
 </html>
