--- a/resume.html
+++ b/resume.html
@@ -1,59 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-          crossorigin="anonymous" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-          rel="stylesheet">
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE-edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Resume</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+              crossorigin="anonymous" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+              rel="stylesheet">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<body class="container-fluid d-flex p-0">
-    <div class="row" style="font-size: 20px;">
-        <div class="col-xs-12 col-sm-7 col-md-6 col-xxl-4">
+    <body class="container-fluid d-flex p-0 row" style="font-size: 20px;">
+        <article class="col-xs-12 col-sm-7 col-md-6 col-xxl-4">
             <div class="fw-bold ps-2 pt-4 pb-4 pe-2"
-                 style="background-color: rgb(255, 60, 0);">
-                <div style="color: white;">
-                    <h2 class="fw-bold" style="font-family:garamond;">GRAHAM BAGGETT</h2>
-                    <h3 style="font-style: italic;">IT Manager</h3>
-                    <table class="mt-5">
-                        <tr>
-                            <th>
-                                <i class="bi bi-envelope-fill"></i>
-                            </th>
-                            <th style="font-size: 18px;">
-                                graham.l.baggett@census.gov
-                            </th>
-                        </tr>
-                        <tr>
-                            <th>
-                                <i class="bi bi-telephone-fill"></i>
-                            </th>
-                            <th>
-                                (202) 604-6937
-                            </th>
-                        </tr>
-                        <tr>
-                            <th>
-                                <i class="bi bi-geo-alt-fill"></i>
-                            </th>
-                            <th>
-                                Suitland, MD
-                            </th>
-                        </tr>
-                    </table>
-                </div>
+                 style="background-color: rgb(255, 60, 0); color: white;">
+                <h2 class="fw-bold" style="font-family:garamond;">GRAHAM BAGGETT</h2>
+                <h3 style="font-style: italic;">IT Manager</h3>
+                <table class="mt-5">
+                    <tr>
+                        <th>
+                            <i class="bi bi-envelope-fill"></i>
+                        </th>
+                        <th style="font-size: 18px;">
+                            graham.l.baggett@census.gov
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>
+                            <i class="bi bi-telephone-fill"></i>
+                        </th>
+                        <th>
+                            (202) 604-6937
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>
+                            <i class="bi bi-geo-alt-fill"></i>
+                        </th>
+                        <th>
+                            Suitland, MD
+                        </th>
+                    </tr>
+                </table>
             </div>
             <div class="pb-1 pt-4 ps-2 pe-2"
                  style="background-color: rgb(248, 241, 241); font-family: 'Montserrat', sans-serif;">
@@ -97,106 +94,112 @@
                 <p><b>Source Control Tools:</b> Git</p>
                 <p><b>Web Servers:</b> Tomcat, WebLogic</p>
             </div>
-        </div>
-        <div class="col-xs-12 col-sm-5 col-md-6 col-xxl-8">
-            <div class="pt-4 ps-4 pe-2">
-                <h2 class="fw-bold">WORK EXPERIENCE</h2>
-                <div style="font-family: 'Montserrat', sans-serif;">
-                    <h3>Branch Chief</h3>
-                    <h4 class="fw-bold" style="color: rgb(255, 60, 0)">Decennial IT
-                        Division,
-                        U.S. Census
-                        Bureau</h4>
-                    <p>
-                        <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
-                        <span class="pe-4">November 2015 - current</span>
-                        <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
-                        Suitland, MD
-                    </p>
-                    <ul>
-                        <li>Led a team developing a Continuous Delivery pipeline for
-                            software
-                            releases
-                        </li>
-                        <li>Managed the development of JAGUAR, a topological
-                            web application built on Vaadin and the Spring
-                            framework</li>
-                        <li>
-                            Collaborated with security and infrastructure staff to
-                            obtain an Authority To Operate (ATO) for JAGUAR
-                        </li>
-                        <li>
-                            Led the development of a Continuous Integration
-                            pipeline for JAGUAR that includes automated build,
-                            deployment, security check, and regression testing in a
-                            development environment
-                        </li>
-                        <li>
-                            Led an automated testing team for JAGUAR using the
-                            Agile Kanban methodology
-                        </li>
-                        <li>
-                            Collaborated with the Risk Review Board to identify and
-                            mitigate JAGUAR risk
-                        </li>
-                        <li>
-                            Led an Agile Scrum team responsible for developing a
-                            reporting application for the MAF/TIGER database,
-                            Census' Oracle data store of spatial and address
-                            information
-                        </li>
-                    </ul>
-                    <br />
-                    <h3>Software Team Lead</h3>
-                    <h4 class="fw-bold" style="color: rgb(255, 60, 0)">Geography Division,
-                        U.S. Census Bureau</h4>
-                    <p>
-                        <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
-                        <span class="pe-4">November 2015 - current</span>
-                        <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
-                        Suitland, MD
-                    </p>
-                    <ul>
-                        <li>Led an Agile Scrum team in developing an MVP for an
-                            internal change detection web application named BARCA,
-                            and obtaining an ATO.</li>
-                        <li>
-                            Worked with other software developers and infrastructure
-                            team to migrate Java applet from Oracle Containers for
-                            J2EE (OC4J) to Oracle WebLogic
-                        </li>
-                        <li>
-                            Provided troubleshooting support for a Java applet named
-                            GATRES with 400 concurrent users during peak 2010
-                            Census operations
-                        </li>
-                    </ul>
-                    <br />
-                    <h3>Software Developer</h3>
-                    <h4 class="fw-bold" style="color: rgb(255, 60, 0)">Geography Division,
-                        U.S. Census Bureau</h4>
-                    <p>
-                        <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
-                        <span class="pe-4">June 2004 - May 2009</span>
-                        <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
-                        Suitland, MD
-                    </p>
-                    <ul>
-                        <li>Helped develop an internal Java applet named GATRES for
-                            viewing
-                            and
-                            updating Census topological data in the MAF/TIGER database
-                        </li>
-                        <li>Helped develop a Java API for maintaining the integrity of
-                            Census data stored in an Oracle database</li>
-                        <li>Developed SQL scripts and PL/SQL routines for querying
-                            and updating Census spatial and topological data in the
-                            MAF/TIGER database</li>
-                    </ul>
-                </div>
+        </article>
+        <article class="col-xs-12 col-sm-5 col-md-6 col-xxl-8 pt-4 ps-4 pe-2">
+            <h2 class="fw-bold">WORK EXPERIENCE</h2>
+            <div style="font-family: 'Montserrat', sans-serif;">
+                <h3>Branch Chief</h3>
+                <h4 class="fw-bold" style="color: rgb(255, 60, 0)">
+                    Decennial IT Division, U.S. Census Bureau
+                </h4>
+                <p>
+                    <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                    <span class="pe-4">November 2015 - current</span>
+                    <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
+                    Suitland, MD
+                </p>
+                <ul>
+                    <li>
+                        Led a team developing a Continuous Delivery pipeline for
+                        software
+                        releases
+                    </li>
+                    <li>
+                        Managed the development of JAGUAR, a topological
+                        web application built on Vaadin and the Spring
+                        framework
+                    </li>
+                    <li>
+                        Collaborated with security and infrastructure staff to
+                        obtain an Authority To Operate (ATO) for JAGUAR
+                    </li>
+                    <li>
+                        Led the development of a Continuous Integration
+                        pipeline for JAGUAR that includes automated build,
+                        deployment, security check, and regression testing in a
+                        development environment
+                    </li>
+                    <li>
+                        Led an automated testing team for JAGUAR using the
+                        Agile Kanban methodology
+                    </li>
+                    <li>
+                        Collaborated with the Risk Review Board to identify and
+                        mitigate JAGUAR risk
+                    </li>
+                    <li>
+                        Led an Agile Scrum team responsible for developing a
+                        reporting application for the MAF/TIGER database,
+                        Census' Oracle data store of spatial and address
+                        information
+                    </li>
+                </ul>
+                <br />
+                <h3>Software Team Lead</h3>
+                <h4 class="fw-bold" style="color: rgb(255, 60, 0)">
+                    Geography Division, U.S. Census Bureau
+                </h4>
+                <p>
+                    <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                    <span class="pe-4">November 2015 - current</span>
+                    <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
+                    Suitland, MD
+                </p>
+                <ul>
+                    <li>
+                        Led an Agile Scrum team in developing an MVP for an
+                        internal change detection web application named BARCA,
+                        and obtaining an ATO.
+                    </li>
+                    <li>
+                        Worked with other software developers and infrastructure
+                        team to migrate Java applet from Oracle Containers for
+                        J2EE (OC4J) to Oracle WebLogic
+                    </li>
+                    <li>
+                        Provided troubleshooting support for a Java applet named
+                        GATRES with 400 concurrent users during peak 2010
+                        Census operations
+                    </li>
+                </ul>
+                <br />
+                <h3>Software Developer</h3>
+                <h4 class="fw-bold" style="color: rgb(255, 60, 0)">Geography Division,
+                    U.S. Census Bureau
+                </h4>
+                <p>
+                    <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                    <span class="pe-4">June 2004 - May 2009</span>
+                    <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
+                    Suitland, MD
+                </p>
+                <ul>
+                    <li>Helped develop an internal Java applet named GATRES for
+                        viewing and updating Census topological data in the
+                        MAF/TIGER database
+                    </li>
+                    <li>
+                        Helped develop a Java API for maintaining the integrity of
+                        Census data stored in an Oracle database
+                    </li>
+                    <li>
+                        Developed SQL scripts and PL/SQL routines for querying
+                        and updating Census spatial and topological data in the
+                        MAF/TIGER database
+                    </li>
+                </ul>
             </div>
-        </div>
-    </div>
-</body>
+        </article>
+    </body>
 
 </html>
