--- a/resume.html
+++ b/resume.html
@@ -23,9 +23,9 @@
         <article class="col-xs-12 col-sm-7 col-md-6 col-xxl-4">
             <div class="fw-bold ps-2 pt-4 pb-4 pe-2"
                  style="background-color: rgb(255, 60, 0); color: white;">
-                <h2 class="fw-bold" style="font-family:garamond;">GRAHAM BAGGETT</h2>
-                <h3 style="font-style: italic;">IT Manager</h3>
-                <table class="mt-5">
+                <h1 style="font-family:garamond;">GRAHAM BAGGETT</h1>
+                <h3 class="mb-5" style="font-style: italic;">IT Manager</h3>
+                <table>
                     <tr>
                         <th>
                             <i class="bi bi-envelope-fill"></i>
@@ -54,10 +54,10 @@
             </div>
             <div class="pb-1 pt-4 ps-2 pe-2"
                  style="background-color: rgb(248, 241, 241); font-family: 'Montserrat', sans-serif;">
-                <h3 class="fw-bold">EDUCATION</h3>
+                <h2>EDUCATION</h2>
                 <h4 style="margin-bottom: .2rem;">
                     Bachelor of Business Administration<br>Computer Information Systems<br>
-                    <span class="fw-bold" style="color: rgb(255, 60, 0)">
+                    <span class="teamOrange">
                         James Madison University
                     </span>
                 </h4>
@@ -79,7 +79,7 @@
                         </th>
                     </tr>
                 </table>
-                <h4 class="fw-bold">SKILLS</h4>
+                <h2>SKILLS</h2>
                 <p><b>Build Tools:</b> Maven</p>
                 <p><b>CI Tools:</b> GitLab</p>
                 <p><b>Databases:</b> Oracle</p>
@@ -95,110 +95,108 @@
                 <p><b>Web Servers:</b> Tomcat, WebLogic</p>
             </div>
         </article>
-        <article class="col-xs-12 col-sm-5 col-md-6 col-xxl-8 pt-4 ps-4 pe-2">
-            <h2 class="fw-bold">WORK EXPERIENCE</h2>
-            <div style="font-family: 'Montserrat', sans-serif;">
-                <h3>Branch Chief</h3>
-                <h4 class="fw-bold" style="color: rgb(255, 60, 0)">
-                    Decennial IT Division, U.S. Census Bureau
-                </h4>
-                <p>
-                    <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
-                    <span class="pe-4">November 2015 - current</span>
-                    <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
-                    Suitland, MD
-                </p>
-                <ul>
-                    <li>
-                        Led a team developing a Continuous Delivery pipeline for
-                        software
-                        releases
-                    </li>
-                    <li>
-                        Managed the development of JAGUAR, a topological
-                        web application built on Vaadin and the Spring
-                        framework
-                    </li>
-                    <li>
-                        Collaborated with security and infrastructure staff to
-                        obtain an Authority To Operate (ATO) for JAGUAR
-                    </li>
-                    <li>
-                        Led the development of a Continuous Integration
-                        pipeline for JAGUAR that includes automated build,
-                        deployment, security check, and regression testing in a
-                        development environment
-                    </li>
-                    <li>
-                        Led an automated testing team for JAGUAR using the
-                        Agile Kanban methodology
-                    </li>
-                    <li>
-                        Collaborated with the Risk Review Board to identify and
-                        mitigate JAGUAR risk
-                    </li>
-                    <li>
-                        Led an Agile Scrum team responsible for developing a
-                        reporting application for the MAF/TIGER database,
-                        Census' Oracle data store of spatial and address
-                        information
-                    </li>
-                </ul>
-                <br />
-                <h3>Software Team Lead</h3>
-                <h4 class="fw-bold" style="color: rgb(255, 60, 0)">
-                    Geography Division, U.S. Census Bureau
-                </h4>
-                <p>
-                    <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
-                    <span class="pe-4">November 2015 - current</span>
-                    <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
-                    Suitland, MD
-                </p>
-                <ul>
-                    <li>
-                        Led an Agile Scrum team in developing an MVP for an
-                        internal change detection web application named BARCA,
-                        and obtaining an ATO.
-                    </li>
-                    <li>
-                        Worked with other software developers and infrastructure
-                        team to migrate Java applet from Oracle Containers for
-                        J2EE (OC4J) to Oracle WebLogic
-                    </li>
-                    <li>
-                        Provided troubleshooting support for a Java applet named
-                        GATRES with 400 concurrent users during peak 2010
-                        Census operations
-                    </li>
-                </ul>
-                <br />
-                <h3>Software Developer</h3>
-                <h4 class="fw-bold" style="color: rgb(255, 60, 0)">Geography Division,
-                    U.S. Census Bureau
-                </h4>
-                <p>
-                    <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
-                    <span class="pe-4">June 2004 - May 2009</span>
-                    <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
-                    Suitland, MD
-                </p>
-                <ul>
-                    <li>Helped develop an internal Java applet named GATRES for
-                        viewing and updating Census topological data in the
-                        MAF/TIGER database
-                    </li>
-                    <li>
-                        Helped develop a Java API for maintaining the integrity of
-                        Census data stored in an Oracle database
-                    </li>
-                    <li>
-                        Developed SQL scripts and PL/SQL routines for querying
-                        and updating Census spatial and topological data in the
-                        MAF/TIGER database
-                    </li>
-                </ul>
-            </div>
+        <article class="col-xs-12 col-sm-5 col-md-6 col-xxl-8 pt-4 ps-4 pe-2" style="font-family: 'Montserrat', sans-serif;">
+            <h2>WORK EXPERIENCE</h2>
+            <h3>Branch Chief</h3>
+            <h4 class="teamOrange">
+                Decennial IT Division, U.S. Census Bureau
+            </h4>
+            <p>
+                <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                <span class="pe-4">November 2015 - current</span>
+                <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
+                Suitland, MD
+            </p>
+            <ul>
+                <li>
+                    Led a team developing a Continuous Delivery pipeline for
+                    software releases
+                </li>
+                <li>
+                    Managed the development of JAGUAR, a topological
+                    web application built on Vaadin and the Spring
+                    framework
+                </li>
+                <li>
+                    Collaborated with security and infrastructure staff to
+                    obtain an Authority To Operate (ATO) for JAGUAR
+                </li>
+                <li>
+                    Led the development of a Continuous Integration
+                    pipeline for JAGUAR that includes automated build,
+                    deployment, security check, and regression testing in a
+                    development environment
+                </li>
+                <li>
+                    Led an automated testing team for JAGUAR using the
+                    Agile Kanban methodology
+                </li>
+                <li>
+                    Collaborated with the Risk Review Board to identify and
+                    mitigate JAGUAR risk
+                </li>
+                <li>
+                    Led an Agile Scrum team responsible for developing a
+                    reporting application for the MAF/TIGER database,
+                    Census' Oracle data store of spatial and address
+                    information
+                </li>
+            </ul>
+            <br />
+            <h3>Software Team Lead</h3>
+            <h4 class="teamOrange">
+                Geography Division, U.S. Census Bureau
+            </h4>
+            <p>
+                <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                <span class="pe-4">November 2015 - current</span>
+                <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
+                Suitland, MD
+            </p>
+            <ul>
+                <li>
+                    Led an Agile Scrum team in developing an MVP for an
+                    internal change detection web application named BARCA,
+                    and obtaining an ATO.
+                </li>
+                <li>
+                    Worked with other software developers and infrastructure
+                    team to migrate Java applet from Oracle Containers for
+                    J2EE (OC4J) to Oracle WebLogic
+                </li>
+                <li>
+                    Provided troubleshooting support for a Java applet named
+                    GATRES with 400 concurrent users during peak 2010
+                    Census operations
+                </li>
+            </ul>
+            <br />
+            <h3>Software Developer</h3>
+            <h4 class="teamOrange">
+                Geography Division, U.S. Census Bureau
+            </h4>
+            <p>
+                <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                <span class="pe-4">June 2004 - May 2009</span>
+                <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
+                Suitland, MD
+            </p>
+            <ul>
+                <li>
+                    Helped develop an internal Java applet named GATRES for
+                    viewing and updating Census topological data in the
+                    MAF/TIGER database
+                </li>
+                <li>
+                    Helped develop a Java API for maintaining the integrity of
+                    Census data stored in an Oracle database
+                </li>
+                <li>
+                    Developed SQL scripts and PL/SQL routines for querying
+                    and updating Census spatial and topological data in the
+                    MAF/TIGER database
+                </li>
+            </ul>
         </article>
     </body>
 
