switched to bootstrap opacity classes

--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
                 <table style="margin-left: 9%; margin-bottom: 9%;">
                     <tr>
                         <th>
-                            <i class="bi bi-calendar3" style="opacity: 0.4"></i>
+                            <i class="bi bi-calendar3 opacity-25"></i>
                         </th>
                         <th style="font-weight: normal;">
                             January 2001 - May 2004
@@ -72,7 +72,7 @@
                     </tr>
                     <tr>
                         <th>
-                            <i class="bi bi-geo-alt-fill" style="opacity: 0.3"></i>
+                            <i class="bi bi-geo-alt-fill opacity-25"></i>
                         </th>
                         <th style="font-weight: normal;">
                             Harrisonburg, VA
@@ -102,9 +102,9 @@
                 Decennial IT Division, U.S. Census Bureau
             </h4>
             <p>
-                <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                <i class="bi bi-calendar3 pe-2 opacity-25"></i>
                 <span class="pe-4">November 2015 - current</span>
-                <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
+                <i class="bi bi-geo-alt-fill pe-1 opacity-25"></i>
                 Suitland, MD
             </p>
             <ul>
@@ -148,9 +148,9 @@
                 Geography Division, U.S. Census Bureau
             </h4>
             <p>
-                <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                <i class="bi bi-calendar3 pe-2 opacity-25"></i>
                 <span class="pe-4">November 2015 - current</span>
-                <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
+                <i class="bi bi-geo-alt-fill pe-1 opacity-25"></i>
                 Suitland, MD
             </p>
             <ul>
@@ -176,9 +176,9 @@
                 Geography Division, U.S. Census Bureau
             </h4>
             <p>
-                <i class="bi bi-calendar3 pe-2" style="opacity: 0.4"></i>
+                <i class="bi bi-calendar3 pe-2 opacity-25"></i>
                 <span class="pe-4">June 2004 - May 2009</span>
-                <i class="bi bi-geo-alt-fill pe-1" style="opacity: 0.3"></i>
+                <i class="bi bi-geo-alt-fill pe-1 opacity-25"></i>
                 Suitland, MD
             </p>
             <ul>
